[package]
name = "mongo-wasm"
version = "0.1.0"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "examples/limit",
    "examples/passthrough",
    "examples/project",
    "examples/stats",
]

[dependencies]
bson = { git = "https://github.com/lrlna/bson-rs", branch = "wasm-suport" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
