[package]
name = "mongo-wasm-example-stats"
version = "0.1.0"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mongo-wasm = { path = '../..', version = '0.1' }
serde = { version = "1.0", features = ["derive"] }
streaming-stats = "0.2.2"